--- a/index.html
+++ b/index.html
@@ -32,5 +32,29 @@
           
         </ul>
     </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project 1: Web Application</h3>
+            <p>A web application built using React.js for backend.</p>
+            <p>GitHub Repository: <a href="#">Link</a></p>
+        </div>
+        <div class="project">
+            <h3>Project 2: Game Application using Javascript</h3>
+            <p>A Pong Game Application using Javascript.</p>
+            <p>Link:<a href="#https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/"></a></p>
+        </div>
+       <div class="project">
+            <h3>Project 3: Game Application using PHP</h3>
+            <p>A NIM Game Application using PHP.</p>
+            <p>Link:<a href="#https://csunix.mohawkcollege.ca/~sa000892233/private/10260/a3/"></a></p>
+        </div>
+    </section>
+    
+    <footer>
+        <h2>Contact Information</h2>
+        <p>Email: 000892233@mohawkcollege.ca</p>
+        <p>LinkedIn: <a href="#zeelpatel.ca@gmail.com">Link</a></p>
+    </footer>
   </body>
 </html>
