--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
         <div class="project">
             <h3>Project 2: Game Application using Javascript</h3>
             <p>A Pong Game Application using Javascript.</p>
-            <p>Link:<a href="#https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/"></a></p>
+            <p>Link:<a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/">Pong Game</a></p>
         </div>
        <div class="project">
             <h3>Project 3: Game Application using PHP</h3>
             <p>A NIM Game Application using PHP.</p>
-            <p>Link:<a href="#https://csunix.mohawkcollege.ca/~sa000892233/private/10260/a3/"></a></p>
+            <p>Link:<a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10260/a3/">NIM Game</a></p>
         </div>
     </section>
     
