--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <body>
     <h1> Zeel Patel Software Support Portfolio</h1>
     <p> Wekcome to my portfolio website !!!!</p>
+
+    <nav>
+      <a href="#home" class="nav-button">Home</a>
+      <a href="#about" class="nav-button">About</a>
+      <a href="#portfolio" class="nav-button">Portfolio</a>
+      <a href="#contact" class="nav-button">Contact</a>
+    </nav>
+
     <section id="summary">
         <h2>Summarizing Statement</h2>
         <p>I am a passionate software Support with experience in programming, mobile app development, and machine learning.</p>
