--- a/index.html
+++ b/index.html
@@ -2,17 +2,39 @@
 <html>
   <head>
     <title> My Portfolio Website</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
     <h1> Zeel Patel Software Support Portfolio</h1>
     <p> Wekcome to my portfolio website !!!!</p>
 
-    <nav>
-      <a href="#home" class="nav-button">Home</a>
-      <a href="#about" class="nav-button">About</a>
-      <a href="#portfolio" class="nav-button">Portfolio</a>
-      <a href="#contact" class="nav-button">Contact</a>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Your Logo</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link btn btn-primary" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-primary" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-primary" href="#">Skills</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link btn btn-primary" href="#">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-primary" href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
     <section id="summary">
         <h2>Summarizing Statement</h2>
