--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="#">Home</a>
+          <a class="nav-link btn btn-primary" href="Home.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link btn btn-primary" href="#">About</a>
