--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <a class="nav-link btn btn-primary" href="Home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="#">About</a>
+          <a class="nav-link btn btn-primary" href="About.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link btn btn-primary" href="#">Skills</a>
