--- a/Home.html
+++ b/Home.html
@@ -2,12 +2,37 @@
 <html>
   <head>
     <title>Home Page</title>
-    <body>
-      <p> I am currently pursuing a diploma in software support, computer science.
-      My coursework covers a wide range of topics including programming languages, software development methodologies, database management, and system administration.
-      I actively seek opportunities to enhance my skills through workshops, online courses, and self-directed learning.</p>
-      <p> I am passionate about leveraging technology to drive positive change and improve my experiences.
-          In the future, I aspire to transition into roles such as software developer, system administrator, or IT project manager, where I can apply my technical expertise and leadership skills to contribute to innovative projects.</p>
-    </body>
   </head>
+  <body>
+    <h1>
+      Home Page
+    </h1>
+    <h2>Education</h2>
+    <p>Pursuing Diploma in Computer System technician software Support in Mohawk College,Graduate year: 2024</p>
+    <h2>Skills</h2>
+     <ul>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>React.js</li>
+            <li>C#</li>
+            <li>Java</li>
+            <li>Quality Testing</li>
+            <li>PHP</li>
+           <li>MySQL</li>
+          
+        </ul>
+    <h2>Projects</h2>
+    <p>Project 1: Web Application</p>
+    <p>Project 2: Game Application using Javascript</p>
+    <p>Project 3: Game Application using PHP</p>
+    <h2>
+      Contact Information
+    </h2>
+    <ul>
+      <li>Resume</li>
+      <li>Email</li>
+    </ul>
+  </body>
 </html>
