--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a class="nav-link btn btn-primary" href="About.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="#">Skills</a>
+          <a class="nav-link btn btn-primary" href="Skills.html">Skills</a>
         </li>
          <li class="nav-item">
           <a class="nav-link btn btn-primary" href="#">Projects</a>
