--- a/Skills.html
+++ b/Skills.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h2>Skills</h2>
-    <img src="file:///home/tooltime/Desktop/images/Python.jpeg" alt= "Python Image">
+    <img src="Python.jpeg" alt= "Python Image">
   </body>
 </html>
