--- a/Skills.html
+++ b/Skills.html
@@ -6,5 +6,13 @@
   <body>
     <h2>Skills</h2>
     <img src="Python.jpeg" alt= "Python Image">
+    <img src="C#.jpeg" alt= "C# Image">
+    <img src="Css.png" alt= "CSS Image">
+    <img src="HTML.png" alt= "HTML Image">
+    <img src="Java.png" alt= "Java Image">
+    <img src="Javascript.jpeg" alt= "Javascript Image">
+    <img src="MySQL.png" alt= "MySQL Image">
+    <img src="PHP.png" alt= "PHP Image">
+    <img src="React.png" alt= "React Image">
   </body>
 </html>
