--- a/Skills.html
+++ b/Skills.html
@@ -6,7 +6,7 @@
   <body>
     <h2>Skills</h2>
     <img src="Python.jpeg" alt= "Python Image">
-    <img src="C#.jpeg" alt= "C# Image">
+    <img src="C.jpeg" alt= "C# Image">
     <img src="Css.png" alt= "CSS Image">
     <img src="HTML.png" alt= "HTML Image">
     <img src="Java.png" alt= "Java Image">
