--- a/Skills.html
+++ b/Skills.html
@@ -7,7 +7,7 @@
     <h2>Skills</h2>
     <img src="Python.jpeg" alt= "Python Image">
     <img src="C.jpeg" alt= "C# Image">
-    <img src="Css.png" alt= "CSS Image">
+    <img src="CSS.png" alt= "CSS Image">
     <img src="HTML.png" alt= "HTML Image">
     <img src="Java.png" alt= "Java Image">
     <img src="Javascript.jpeg" alt= "Javascript Image">
