--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a class="nav-link btn btn-primary" href="Skills.html">Skills</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="#">Projects</a>
+          <a class="nav-link btn btn-primary" href="Projects.html">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link btn btn-primary" href="#">Contact</a>
