--- a/Projects.html
+++ b/Projects.html
@@ -14,12 +14,12 @@
         <div class="project">
             <h3>Project 2: Game Application using Javascript</h3>
             <p>A Pong Game Application using Javascript.</p>
-            <p>GitHub Repository: <a href="#https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/">Link</a></p>
+            <p>GitHub Repository: <a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/">Pong Game</a></p>
         </div>
        <div class="project">
             <h3>Project 3: Game Application using PHP</h3>
             <p>A NIM Game Application using PHP.</p>
-            <p>GitHub Repository: <a href="#https://csunix.mohawkcollege.ca/~sa000892233/private/10260/a3/">Link</a></p>
+            <p>GitHub Repository: <a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10260/a3/">NIM Game</a></p>
         </div>
     </section>
   </body>
