--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-link btn btn-primary" href="Projects.html">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="#">Contact</a>
+          <a class="nav-link btn btn-primary" href="Contact.html">Contact</a>
         </li>
       </ul>
     </div>
