--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
     <h2>
       Contacts
     </h2>
-     <p>Email: your@email.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/yourprofile" target="_blank">Your Profile</a></p>
+     <p>Email:000892233@mohawkcollege.ca</p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/zeel-patel-ca" target="_blank">My Profile</a></p>
   </body>
 </html>
