--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
   </style>
   </head>
   <body>
-    <h1> Zeel Patel Software Support Portfolio</h1>
-    <p> Wekcome to my portfolio website !!!!</p>
-
+    <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Your Logo</a>
@@ -72,11 +70,12 @@
       </ul>
     </div>
   </div>
-</nav>
+  </nav>
+</header>
     <main class="container py-5">
     <section id="summary" class="mb-5">
       <h1 class="display-4">Zeel Patel Software Support Portfolio</h1>
-      <p class="lead">Welcome to my portfolio website!</p>
+      <p class="lead">Welcome to my portfolio website!!!!</p>
     </section>
     </main>
 
