--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
       color: #666666;
       font-size: 0.9rem;
     }
+    .btn-primary {
+      background-color: #007bff;
+      border-color: #007bff;
+    }
+
+    .btn-primary:hover {
+      background-color: #0056b3;
+      border-color: #0056b3;
+    }
   </style>
   </head>
   <body>
@@ -53,19 +62,19 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="Home.html">Home</a>
+          <a class="nav-link btn btn-primary me-3" href="Home.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="About.html">About</a>
+          <a class="nav-link btn btn-primary me-3" href="About.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="Skills.html">Skills</a>
+          <a class="nav-link btn btn-primary me-3" href="Skills.html">Skills</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="Projects.html">Projects</a>
+          <a class="nav-link btn btn-primary me-3" href="Projects.html">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn btn-primary" href="Contact.html">Contact</a>
+          <a class="nav-link btn btn-primary me-3" href="Contact.html">Contact</a>
         </li>
       </ul>
     </div>
