--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
       background-color: #ffffff;
     }
 
-    .navbar-brand {
-      font-size: 1.5rem;
-    }
-
     .navbar-nav .nav-link {
       font-weight: bold;
     }
@@ -55,7 +51,7 @@
     <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="logo.png">Your Logo</a>
+        <img src="logo.png" alt="logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
