--- a/Home.html
+++ b/Home.html
@@ -1,38 +1,96 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Home Page</title>
-  </head>
-  <body>
-    <h1>
-      Home Page
-    </h1>
-    <h2>Education</h2>
-    <p>Pursuing Diploma in Computer System technician software Support in Mohawk College,Graduate year: 2024</p>
-    <h2>Skills</h2>
-     <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>React.js</li>
-            <li>C#</li>
-            <li>Java</li>
-            <li>Quality Testing</li>
-            <li>PHP</li>
-           <li>MySQL</li>
-          
-        </ul>
-    <h2>Projects</h2>
+<head>
+  <title>Home Page</title>
+  <style>
+  
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      text-align: center;
+      margin-top: 50px;
+      color: #007bff; /* Primary color */
+    }
+
+    h2 {
+      color: #007bff; /* Primary color */
+      margin-top: 30px;
+    }
+
+    p {
+      margin-top: 10px;
+      line-height: 1.6;
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    ul li {
+      margin-top: 10px;
+    }
+    .skills {
+      margin-top: 10px;
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .skills span {
+      background-color: #007bff; /* Primary color */
+      color: #fff;
+      padding: 5px 10px;
+      margin: 5px;
+      border-radius: 5px;
+    }
+
+   
+    .projects {
+      margin-top: 10px;
+    }
+
+    .projects p {
+      margin-top: 5px;
+    }
+  </style>
+</head>
+<body>
+  <h1>Home Page</h1>
+  
+  <h2>Education</h2>
+  <p>Pursuing Diploma in Computer System Technician Software Support in Mohawk College, Graduate year: 2024</p>
+  
+  <h2>Skills</h2>
+  <div class="skills">
+    <span>JavaScript</span>
+    <span>Python</span>
+    <span>HTML</span>
+    <span>CSS</span>
+    <span>React.js</span>
+    <span>C#</span>
+    <span>Java</span>
+    <span>Quality Testing</span>
+    <span>PHP</span>
+    <span>MySQL</span>
+  </div>
+
+  <h2>Projects</h2>
+  <div class="projects">
     <p>Project 1: Web Application</p>
-    <p>Project 2: Game Application using Javascript</p>
+    <p>Project 2: Game Application using JavaScript</p>
     <p>Project 3: Game Application using PHP</p>
-    <h2>
-      Contact Information
-    </h2>
-    <ul>
-      <li>Resume</li>
-      <li>Email</li>
-    </ul>
+  </div>
+
+  <h2>Contact Information</h2>
+  <ul>
+    <li>Resume</li>
+    <li>Email</li>
+  </ul>
   </body>
 </html>
