--- a/Home.html
+++ b/Home.html
@@ -9,7 +9,8 @@
       background-color: #f8f9fa;
       color: #333;
       margin: 0;
-      padding: 0;
+      padding: 0
+      text-align: center;
     }
 
     h1 {
