--- a/Skills.html
+++ b/Skills.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> Skills</title>
-  </head>
-  <body>
-    <h2>Skills</h2>
-    <img src="Python.jpeg" alt= "Python Image">
-    <img src="C.jpeg" alt= "C# Image">
-    <img src="HTML.png" alt= "HTML Image">
-    <img src="Java.png" alt= "Java Image">
-    <img src="Javascript.jpeg" alt= "Javascript Image">
-    <img src="MySQL.png" alt= "MySQL Image">
-    <img src="PHP.png" alt= "PHP Image">
-    <img src="React.png" alt= "React Image">
-  </body>
+<head>
+  <title>Skills</title>
+  <style>
+   
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    h2 {
+      text-align: center;
+      margin-top: 50px;
+      color: #007bff; 
+    }
+    .skills-container {
+      display: flex;
+      justify-content: center; 
+      flex-wrap: wrap; 
+    }
+
+    
+    .skills-container img {
+      width: 100px; 
+      height: auto; 
+      margin: 10px; 
+    }
+  </style>
+</head>
+<body>
+  <h2>Skills</h2>
+
+  <div class="skills-container">
+    <img src="Python.jpeg" alt="Python Image">
+    <img src="C.jpeg" alt="C# Image">
+    <img src="HTML.png" alt="HTML Image">
+    <img src="Java.png" alt="Java Image">
+    <img src="Javascript.jpeg" alt="Javascript Image">
+    <img src="MySQL.png" alt="MySQL Image">
+    <img src="PHP.png" alt="PHP Image">
+    <img src="React.png" alt="React Image">
+  </div>
+</body>
 </html>
