--- a/Skills.html
+++ b/Skills.html
@@ -16,13 +16,13 @@
     }
     .skills-container {
       display: flex;
-      justify-content: center; 
       flex-wrap: wrap; 
+      justify-content: space-evenly; 
     }
 
-    
+ 
     .skills-container img {
-      width: 100px; 
+      width: 30%; 
       height: auto; 
       margin: 10px; 
     }
