--- a/Skills.html
+++ b/Skills.html
@@ -18,11 +18,12 @@
       display: flex;
       flex-wrap: wrap; 
       justify-content: space-evenly; 
+      align-items:center;
     }
 
  
     .skills-container img {
-      width: 30%; 
+      width: 100px; 
       height: auto; 
       margin: 10px; 
     }
