--- a/Skills.html
+++ b/Skills.html
@@ -17,15 +17,15 @@
     .skills-container {
       display: flex;
       flex-wrap: wrap; 
-      justify-content: space-evenly; 
-      align-items:center;
+      justify-content: flex-start; 
+      padding:5px;
     }
 
  
     .skills-container img {
       width: 100px; 
       height: auto; 
-      margin: 10px; 
+      margin: 20px; 
     }
   </style>
 </head>
