--- a/Skills.html
+++ b/Skills.html
@@ -7,6 +7,7 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f8f9fa;
+      margin:20px 20px 20px 20px;
     }
 
     h2 {
@@ -25,7 +26,7 @@
     .skills-container img {
       width: 100px; 
       height: auto; 
-      margin: 20px; 
+      margin: 40px; 
     }
   </style>
 </head>
