--- a/Contact.html
+++ b/Contact.html
@@ -9,5 +9,6 @@
     </h2>
      <p>Email:000892233@mohawkcollege.ca</p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/zeel-patel-ca" target="_blank">My Profile</a></p>
+    <p>Resume: <a href="Zeel_Resume.pdf">My Resume</a></p>
   </body>
 </html>
