--- a/Contact.html
+++ b/Contact.html
@@ -2,6 +2,35 @@
 <html>
   <head>
     <title> COntact Information</title>
+  
+  <style>
+   
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    h2 {
+      text-align: center;
+      margin-top: 50px;
+      color: #007bff; 
+    }
+
+    p {
+      margin-top: 10px;
+      line-height: 1.6;
+      color: #333; 
+    }
+
+    a {
+      color: #007bff; 
+      text-decoration: none; 
+    }
+
+    a:hover {
+      text-decoration: underline; 
+    }
+    </style>
   </head>
   <body>
     <h2>
