--- a/Contact.html
+++ b/Contact.html
@@ -4,10 +4,10 @@
     <title> COntact Information</title>
   
   <style>
-   
     body {
       font-family: Arial, sans-serif;
       background-color: #f8f9fa;
+      text-align:center;
     }
 
     h2 {
