--- a/Projects.html
+++ b/Projects.html
@@ -1,26 +1,75 @@
-<!DOCTYPE.html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title> Projects</title>
-  </head>
-  <body>
-    <h2> Projects</h2>
-        <section id="projects">
-        <div class="project">
-            <h3>Project 1: Web Application</h3>
-            <p>A web application built using React.js for backend.</p>
-            <p>GitHub Repository: <a href="#">Link</a></p>
-        </div>
-        <div class="project">
-            <h3>Project 2: Game Application using Javascript</h3>
-            <p>A Pong Game Application using Javascript.</p>
-            <p>GitHub Repository: <a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/">Pong Game</a></p>
-        </div>
-       <div class="project">
-            <h3>Project 3: Game Application using PHP</h3>
-            <p>A NIM Game Application using PHP.</p>
-            <p>GitHub Repository: <a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10260/a3/">NIM Game</a></p>
-        </div>
-    </section>
+<head>
+  <title>Projects</title>
+  <style>
+   
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      margin: 0;
+      padding: 0;
+    }
+
+    h2 {
+      text-align: center;
+      margin-top: 50px;
+      color: #007bff; 
+    }
+
+    #projects {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .project {
+      background-color: #ffffff;
+      border-radius: 10px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .project h3 {
+      color: #007bff;
+    }
+
+    .project p {
+      color: #333;
+      line-height: 1.6;
+    }
+
+    .project a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .project a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h2>Projects</h2>
+
+  <section id="projects">
+    <div class="project">
+      <h3>Project 1: Web Application</h3>
+      <p>A web application built using React.js for backend.</p>
+      <p>GitHub Repository: <a href="#">Link</a></p>
+    </div>
+    <div class="project">
+      <h3>Project 2: Game Application using JavaScript</h3>
+      <p>A Pong Game Application using JavaScript.</p>
+      <p>GitHub Repository: <a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/">Pong Game</a></p>
+    </div>
+    <div class="project">
+      <h3>Project 3: Game Application using PHP</h3>
+      <p>A NIM Game Application using PHP.</p>
+      <p>GitHub Repository: <a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10260/a3/">NIM Game</a></p>
+    </div>
+      </section>
   </body>
 </html>
+
