--- a/About.html
+++ b/About.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title> About page</title>
-  </head>
-  <body>
-    <h2>About</h2>
-    <p>I am currently pursuing a diploma in software support, computer science. My coursework covers a wide range of topics including programming languages, software development methodologies, database management, and system administration. I actively seek opportunities to enhance my skills through workshops, online courses, and self-directed learning.</p>
-    <p> I am passionate about leveraging technology to drive positive change and improve my experiences. In the future, I aspire to transition into roles such as software developer, system administrator, or IT project manager, where I can apply my technical expertise and leadership skills to contribute to innovative projects.</p>
-  </body>
+<head>
+  <title>About page</title>
+  <style>
+   
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      margin: 0;
+      padding: 0;
+    }
+
+    h2 {
+      text-align: center;
+      margin-top: 50px;
+      color: #007bff; 
+    }
+
+    p {
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      line-height: 1.6;
+      color: #333;
+    }
+  </style>
+</head>
+<body>
+  <h2>About</h2>
+  <p>I am currently pursuing a diploma in software support, computer science. My coursework covers a wide range of topics including programming languages, software development methodologies, database management, and system administration. I actively seek opportunities to enhance my skills through workshops, online courses, and self-directed learning.</p>
+  <p>I am passionate about leveraging technology to drive positive change and improve my experiences. In the future, I aspire to transition into roles such as software developer, system administrator, or IT project manager, where I can apply my technical expertise and leadership skills to contribute to innovative projects.</p>
+</body>
 </html>
