--- a/Projects.html
+++ b/Projects.html
@@ -57,7 +57,7 @@
     <div class="project">
       <h3>Project 1: Web Application</h3>
       <p>A web application built using React.js for backend.</p>
-      <p>GitHub Repository: <a href="#">Link</a></p>
+      <p>GitHub Repository: <a href="webProject.html">Rolling Dice Game</a></p>
     </div>
     <div class="project">
       <h3>Project 2: Game Application using JavaScript</h3>
