--- a/Projects.html
+++ b/Projects.html
@@ -62,7 +62,7 @@
     <div class="project">
       <h3>Project 2: Game Application using JavaScript</h3>
       <p>A Pong Game Application using JavaScript.</p>
-      <p>GitHub Repository: <a href="https://csunix.mohawkcollege.ca/~sa000892233/private/10259/a4/">Pong Game</a></p>
+      <p>GitHub Repository: <a href="pong.html">Pong Game</a></p>
     </div>
     <div class="project">
       <h3>Project 3: Game Application using PHP</h3>
