--- a/pong.html
+++ b/pong.html
@@ -9,6 +9,24 @@
     <!-- purpose of assignment: Practise SVG, javascript and mouse or keyborad event handling for creating the game-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <style>
+                    #game{
+                background-color: blue;
+            }
+            body,main{
+                text-align: center;
+            }
+
+            #Rpaddle{
+                fill: yellow;
+                stroke-width: 4;
+            }
+            #Lpaddle{
+                fill: yellow;
+                stroke-width: 4;
+            }
+
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="main.js" defer>
         var height = 450;
