--- a/About.html
+++ b/About.html
@@ -26,6 +26,7 @@
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       line-height: 1.6;
       color: #333;
+      text-align: center;
     }
   </style>
 </head>
